--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "axios": "^1.4.0",
         "bootstrap": "^5.3.0",
+        "moment": "^2.29.4",
         "next": "^10.0.0",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
