--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
         "next": "^10.0.0",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
-        "socket.io-client": "^4.7.1"
+        "socket.io-client": "^4.7.1",
+        "uuid": "^9.0.0"
     }
 }
