--- a/chat/package.json
+++ b/chat/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "auth",
+    "name": "chat",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -18,7 +18,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@tlbooktrading/common": "^1.0.35",
+        "@tlbooktrading/common": "^1.0.38",
         "@types/express": "^4.17.17",
         "express": "^4.18.2",
         "socket.io": "^4.7.1",
