--- a/chat/package.json
+++ b/chat/package.json
@@ -18,9 +18,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@tlbooktrading/common": "^1.0.38",
+        "@tlbooktrading/common": "^1.0.40",
         "@types/express": "^4.17.17",
         "express": "^4.18.2",
+        "mongoose": "^7.4.2",
         "socket.io": "^4.7.1",
         "socket.io-client": "^4.7.1",
         "ts-node-dev": "^2.0.0",
